--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-@import "login.css";
-
 html,
 body,
 div,
@@ -92,4 +90,12 @@ video {
 body {
 	width: 100vw;
 	height: 100vh;
+}
+
+
+.bg-image {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: -1;
 }
