--- a/css/style.css
+++ b/css/style.css
@@ -90,12 +90,16 @@ video {
 body {
 	width: 100vw;
 	height: 100vh;
+	-ms-overflow-style: none;
 }
 
+::-webkit-scrollbar {
+	display: none;
+}
 
 .bg-image {
+	position: absolute;
 	width: 100%;
 	height: 100%;
-	position: absolute;
 	z-index: -1;
 }
