--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
 
 .welcome-title {
     margin-top: 300px;
-    font-size: 72px;
+    font-size: 60px;
     font-weight: 600;
     color: white;
 }
@@ -79,7 +79,7 @@ body {
     z-index: 1;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     width: 100%;
     height: 120px;
     position: fixed;
@@ -90,10 +90,27 @@ body {
 }
 
 .nav-bar__title {
-    /*margin-left: 144px;*/
+    left: 70px;
+    position: absolute;
+    margin-left: 70px;
     margin-bottom: 20px;
     font-size: 72px;
     font-weight: 600;
+}
+
+.nav-bar__div-bar {
+    width: 10px;
+    height: 80px;
+    border-radius: 5px;
+    background-color: gray;
+}
+
+.nav-bar__icons {
+    right: 70px;
+    position: absolute;
+    width: 40%;
+    display: flex;
+    justify-content: space-around;
 }
 
 .icon-block {
