--- a/css/main.css
+++ b/css/main.css
@@ -128,3 +128,24 @@ a {
     text-decoration: none;
     color: black;
 }
+
+#info-bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    bottom: -100vh;
+    background-color: #141414;
+    box-shadow: black 20px 20px 20px 20px;
+}
+
+.info-column,
+.info-column a {
+    width: 33%;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    color: #808080;
+}
