--- a/css/style.css
+++ b/css/style.css
@@ -100,8 +100,11 @@ body {
 }
 
 .bg-image {
-	position: absolute;
-	width: 100%;
-	height: 100%;
+	position: fixed;
+	top: 0;
 	z-index: -1;
+}
+
+a {
+	text-decoration: none;
 }
