--- a/css/progress.css
+++ b/css/progress.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    width: 100%;
+    width: 100vw;
     height: 100%;
 }
 
@@ -46,7 +46,7 @@
 }
 
 .progress input::placeholder {
-    color: white;
+    color: rgba(255, 255, 255, 0.7)
 }
 
 .progress__button {
@@ -66,24 +66,44 @@
 }
 
 .progress__list {
-    margin-top: 50px;
+    margin: 50px;
     color: white;
     font-size: 30px;
     font-weight: 600;
-}
-
-ul {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    border-top: 3px solid white;
+    border-bottom: 3px solid white;
+    border-radius: 1.5px;
+    padding: 5px 0px;
 }
 
+
 li {
+    display: flex;
+    align-items: center;
     list-style: none;
-    padding-left: 0;
+    padding-top: 5px;
     margin-bottom: 10px;
 }
 
-li span:first-child {
+li span {
     margin-right: 15px;
+}
+
+li button {
+    height: 30px;
+    background-color: white;
+    border: none;
+    outline: none;
+    border-radius: 15px;
+    color: black;
+    font-size: 15px;
+    box-shadow: 3px 3px 3px;
+}
+
+li button:active {
+    background-color: gray;
 }
